- Add cmake option to specify which python binary to use
- Autocompletion when specifying static IP adress
- Connection infos in systray menu
- User interface options: signal strength label, tooltips and automatic scan on open
- Add czech translation
- Add brazilian portuguese translation
- Add hungarian translation
v0.2.0
------------------------------------------------
- The preferences panel is now a KCM.
- Use KNetworkManager icons + Bonus: use monochromatic icons if available
- Add spanish translation.
- Add chinese simplified translation.
- Add KNotification support.
- Add About dialog.

v0.1.1
------------------------------------------------
- Add italian translation.
- Change window title.
- Prevent multiple instances.
- Save/restore window size on close.

v0.1
------------------------------------------------
- Initial release. 